syntax = "proto3";

package api.inventory.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/wyfcoding/ecommerce/go-api/inventory/v1;v1";

// InventoryService 定义了库存服务接口
service InventoryService {
  // CreateInventory 创建库存
  rpc CreateInventory(CreateInventoryRequest) returns (CreateInventoryResponse);

  // GetInventory 获取库存
  rpc GetInventory(GetInventoryRequest) returns (GetInventoryResponse);

  // AddStock 增加库存
  rpc AddStock(AddStockRequest) returns (google.protobuf.Empty);

  // DeductStock 扣减库存
  rpc DeductStock(DeductStockRequest) returns (google.protobuf.Empty);

  // LockStock 锁定库存
  rpc LockStock(LockStockRequest) returns (google.protobuf.Empty);

  // UnlockStock 解锁库存
  rpc UnlockStock(UnlockStockRequest) returns (google.protobuf.Empty);

  // ConfirmDeduction 确认扣减
  rpc ConfirmDeduction(ConfirmDeductionRequest) returns (google.protobuf.Empty);

  // ListInventories 获取库存列表
  rpc ListInventories(ListInventoriesRequest) returns (ListInventoriesResponse);

  // GetInventoryLogs 获取库存日志
  rpc GetInventoryLogs(GetInventoryLogsRequest) returns (GetInventoryLogsResponse);
}

// Inventory 库存信息
message Inventory {
  uint64 id = 1; // 唯一标识
  uint64 sku_id = 2; // 库存单元唯一标识
  uint64 product_id = 3; // 产品id
  uint64 warehouse_id = 4; // 仓库ID
  int32 available_stock = 5; // 可用库存
  int32 locked_stock = 6; // 锁定库存
  int32 total_stock = 7; // 总数stock
  int32 status = 8; // 状态
  int32 warning_threshold = 9; // 警告阈值
  google.protobuf.Timestamp created_at = 10; // 创建时间
  google.protobuf.Timestamp updated_at = 11; // 更新时间
}

// CreateInventoryRequest 创建Inventory请求消息结构。
message CreateInventoryRequest {
  uint64 sku_id = 1; // 库存单元唯一标识
  uint64 product_id = 2; // 产品id
  uint64 warehouse_id = 3; // 仓库ID
  int32 total_stock = 4; // 总数stock
  int32 warning_threshold = 5; // 警告阈值
}

// CreateInventoryResponse 创建Inventory响应消息结构。
message CreateInventoryResponse {
  Inventory inventory = 1; // 库存
}

// GetInventoryRequest 获取Inventory请求消息结构。
message GetInventoryRequest {
  uint64 sku_id = 1; // 库存单元唯一标识
}

// GetInventoryResponse 获取Inventory响应消息结构。
message GetInventoryResponse {
  Inventory inventory = 1; // 库存
}

// AddStockRequest AddStock请求消息结构。
message AddStockRequest {
  uint64 sku_id = 1; // 库存单元唯一标识
  int32 quantity = 2; // 数量
  string reason = 3; // 原因
}

// DeductStockRequest DeductStock请求消息结构。
message DeductStockRequest {
  uint64 sku_id = 1; // 库存单元唯一标识
  int32 quantity = 2; // 数量
  string reason = 3; // 原因
}

// LockStockRequest LockStock请求消息结构。
message LockStockRequest {
  uint64 sku_id = 1; // 库存单元唯一标识
  int32 quantity = 2; // 数量
  string reason = 3; // 原因
}

// UnlockStockRequest UnlockStock请求消息结构。
message UnlockStockRequest {
  uint64 sku_id = 1; // 库存单元唯一标识
  int32 quantity = 2; // 数量
  string reason = 3; // 原因
}

// ConfirmDeductionRequest ConfirmDeduction请求消息结构。
message ConfirmDeductionRequest {
  uint64 sku_id = 1; // 库存单元唯一标识
  int32 quantity = 2; // 数量
  string reason = 3; // 原因
}

// ListInventoriesRequest 列出Inventories请求消息结构。
message ListInventoriesRequest {
  uint32 page_size = 1; // 页码大小
  uint32 page_num = 2; // 页码num
}

// ListInventoriesResponse 列出Inventories响应消息结构。
message ListInventoriesResponse {
  repeated Inventory inventories = 1; // 库存列表
  uint64 total_count = 2; // 总数计数
}

// GetInventoryLogsRequest 获取InventoryLogs请求消息结构。
message GetInventoryLogsRequest {
  uint64 inventory_id = 1; // 库存ID
  uint32 page_size = 2; // 页码大小
  uint32 page_num = 3; // 页码num
}

// InventoryLog InventoryLog消息结构。
message InventoryLog {
  uint64 id = 1; // 唯一标识
  uint64 inventory_id = 2; // 库存ID
  string action = 3; // 动作
  int32 change_quantity = 4; // change数量
  int32 old_available = 5; // 旧可用
  int32 new_available = 6; // 创建一个新的实例available
  int32 old_locked = 7; // 旧锁定
  int32 new_locked = 8; // 创建一个新的实例locked
  string reason = 9; // 原因
  google.protobuf.Timestamp created_at = 10; // 创建时间
}

// GetInventoryLogsResponse 获取InventoryLogs响应消息结构。
message GetInventoryLogsResponse {
  repeated InventoryLog logs = 1; // 日志列表
  uint64 total_count = 2; // 总数计数
}
